tests/snapshots/api/node0_v1_node_da_stake_table_current.snap
---
source: tests/common/api_snapshot.rs
---
epoch: "<number>"
stake_table:
  - connect_info: ~
    stake_table_entry:
      stake_amount: "<string>"
      stake_key: "<string>"
    state_ver_key: "<string>"
