tests/snapshots/api/node0_v1_node_oldest_leaf.snap
---
source: tests/common/api_snapshot.rs
---
leaf:
  block_header:
    fields:
      block_merkle_tree_root: "<string>"
      builder_commitment: "<string>"
      builder_signature: ~
      chain_config:
        chain_config:
          Left:
            base_fee: "<string>"
            chain_id: "<string>"
            fee_contract: "<string>"
            fee_recipient: "<string>"
            max_block_size: "<string>"
            stake_table_contract: "<string>"
      fee_info:
        account: "<string>"
        amount: "<string>"
      fee_merkle_tree_root: "<string>"
      height: "<number>"
      l1_finalized:
        hash: "<string>"
        number: "<number>"
        timestamp: "<string>"
      l1_head: "<number>"
      next_stake_table_hash: ~
      ns_table:
        bytes: "<string>"
      payload_commitment: "<string>"
      reward_merkle_tree_root: "<string>"
      timestamp: "<number>"
      timestamp_millis: "<number>"
      total_reward_distributed: "<string>"
    version:
      Version:
        major: "<number>"
        minor: "<number>"
  block_payload: ~
  justify_qc:
    _pd: ~
    data:
      block_number: "<number>"
      epoch: "<number>"
      leaf_commit: "<string>"
    signatures: ~
    view_number: "<number>"
    vote_commitment: "<string>"
  next_drb_result: ~
  next_epoch_justify_qc: ~
  parent_commitment: "<string>"
  upgrade_certificate: ~
  view_change_evidence: ~
  view_number: "<number>"
  with_epoch: "<bool>"
qc:
  _pd: ~
  data:
    block_number: "<number>"
    epoch: "<number>"
    leaf_commit: "<string>"
  signatures: ~
  view_number: "<number>"
  vote_commitment: "<string>"
