tests/snapshots/api/node0_v1_node_sync_status.snap
---
source: tests/common/api_snapshot.rs
---
blocks:
  missing: "<number>"
  ranges: []
leaves:
  missing: "<number>"
  ranges: []
pruned_height: ~
vid_common:
  missing: "<number>"
  ranges: []
